--- a/sass/components/_greenside.scss
+++ b/sass/components/_greenside.scss
@@ -16,11 +16,10 @@
 		border-top-right-radius: 15px;
 		border-bottom-right-radius: 15px;
 		background-color: #99e2d0;
+		animation: sidemouv 0.3s;
 	}
 
-	.price {
-		transition: all 0.2s;
-	}
+	
 }
 
 .container_menu--bloctext:hover {
@@ -28,7 +27,7 @@
 
 	.greenside {
 		visibility: visible;
-		animation: sidemouv 0.3s;
+		// animation: sidemouv 0.3s;
 	}
 
 	@keyframes sidemouv {
