--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -54,11 +54,21 @@ header {
     }
 }
 
+.container__all {
+    width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+
+    @include desktop-only {
+        padding: 0 20px 0;
+    }
+}
+
 .container__functionning {
    background-color: #fff;
 
     h2 {
-        padding: 50px 20px 35px;
+        padding: 50px 20px 0;
         font-size: 26px;
     }
 }
@@ -67,14 +77,14 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 20px 30px;
+    padding: 30px 20px 40px;
     width: 100%;
     gap: 30px;
 
     @include desktop-only {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-between;
     }
 
     li {
@@ -152,8 +162,7 @@ header {
         @include desktop-only {  
             display: flex;
             flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;           
+            flex-wrap: wrap;          
         }
 
         a {
@@ -163,7 +172,7 @@ header {
             width: 100%;
 
             @include desktop-only {
-                width: 45%;
+                width: 50%;
             }
 
         }  
